# Sistema_de_Evaluaci-n_de_CVs_candidatos_con_IA

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  exceptions.py  logging_config.py
app/api/: main.py  routes.py  schemas.py
app/models/: __init__.py  cv_model.py
app/prompts/: __init__.py  cv_prompts.py
app/services/: __init__.py  cv_evaluator.py  pdf_processor.py
tests/: conftest.py  test_api.py  test_config.py  test_cv_evaluator.py  test_cv_model.py  test_pdf_processor.py
ui/: streamlit_ui.py
